api doc overflow fixed, curl made, alignment improved

--- a/src/component/apiDoc/apiCrudTab/Codeblock/Codeblock.scss
+++ b/src/component/apiDoc/apiCrudTab/Codeblock/Codeblock.scss
@@ -70,7 +70,7 @@
   }
   .response-header{
     height: 26px !important;
-    font-size: large;
+
     background-color: $fontColorVAlue  !important;
   }
   .response-body{
